# WorthTrace

./: .gitignore  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
demo/brand/: brand-name-and-logo-directions.md  logo-concepts.html  qianji-brand-spec.md  qianji-logo-concepts.html
docs/: PROJECT_STRUCTURE.md  dashboard_design.md  data_schema.md  final_architecture.md  formulas.md  mobile_pwa_deploy.md  platforms_and_accounts.md  release_v1.md  supabase_mobile_dashboard_snapshots.sql  version_workflow.md
mobile/: README.md  start-mobile-link.command  启动手机链接.command
mobile/docs/: IMPLEMENTATION_PLAN.md
mobile/mockups/: README.md  index.html
mobile/pwa/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
scripts/: build-mobile-pwa.mjs  create_demo_database.py  export_db_check.py  export_demo_db_to_excel.py  import_numbers_history.py  reset_demo_to_onboarding.py  start_demo.command  start_latest.command  start_test.command  start_test_silent.sh  validate_numbers_db.py
src/: App.tsx  cloudSync.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-test.icns  icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_initial_seed.sql
src-tauri/src/: lib.rs  main.rs
src/styles/: global.css
