[package]
name = "financial-planning"
version = "2.7.2"
description = "Local financial planning desktop app"
authors = ["Emily Lu"]
edition = "2021"

[lib]
name = "financial_planning_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
quick-xml = "0.39.4"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tauri = { version = "2", features = [] }
thiserror = "1"
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
